# hvac-vibration-monitor

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay  xiao_ble.overlay
src/: analysis.c  analysis.h  ble.c  ble.h  fft_fixed.c  fft_fixed.h  fsm.c  fsm.h  led.c  led.h  main.c  name_store.c  name_store.h  sensor.c  sensor.h  sensor_adxl343.c  sensor_bme280.c  vib_ring.c  vib_ring.h
test/: simple_monitor.py  test_ble_receiver.py
